# SoftwareUdvikling_Eksamen

./: .gitignore  .~lock.Gennemgang af iterationer.odt#  CMakeLists.txt  CaveDungeon.cpp  CaveDungeon.h  DragonDungeon.cpp  DragonDungeon.h  Dungeon.cpp  Dungeon.h  Enemies.cpp  Enemies.h  Enemy.cpp  Enemy.h  ForestDungeon.cpp  ForestDungeon.h  Game.cpp  Game.h  Gennemgang af iterationer.odt  Hero.cpp  Hero.h  PlainsDungeon.cpp  PlainsDungeon.h  README.md  main.cpp  test  test.cpp  test1
DungeonClasses/: CaveDungeon.cpp  CaveDungeon.h  DragonDungeon.cpp  DragonDungeon.h  Dungeon.cpp  Dungeon.h  ForestDungeon.cpp  ForestDungeon.h  PlainsDungeon.cpp  PlainsDungeon.h  TravellingMerchant.cpp  TravellingMerchant.h
EnemyClasses/: Enemy.cpp  Enemy.h
Factories/: DungeonFactory.cpp  DungeonFactory.h  EnemyFactory.cpp  EnemyFactory.h
GameClass/: Formatter.cpp  Formatter.h  Game.cpp  Game.h
HeroClass/: Hero.cpp  Hero.h
SQL/: Database.cpp  Database.h  database.db  databaseTest.cpp  database_init.txt  hero_init.txt
WeaponClasses/: Weapon.cpp  Weapon.h  Weapons.h
heros/: hero1.txt  hero2.txt  hero3.txt
